--- a/model1.ipynb
+++ b/model1.ipynb
@@ -310,19 +310,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import BitsAndBytesConfig,T5ForConditionalGeneration\n",
+    "from transformers import BitsAndBytesConfig, T5ForConditionalGeneration\n",
     "from transformers.modeling_outputs import Seq2SeqLMOutput\n",
+    "import torch\n",
     "\n",
     "class DualInputT5(T5ForConditionalGeneration):\n",
     "    def forward(\n",
     "        self,\n",
-    "        control_input_ids,\n",
-    "        control_attention_mask,\n",
-    "        data_input_ids,\n",
-    "        data_attention_mask,\n",
+    "        input_ids=None, # Added input_ids to satisfy signature checks if needed, though we use custom args\n",
+    "        attention_mask=None,\n",
+    "        decoder_input_ids=None,\n",
+    "        decoder_attention_mask=None,\n",
+    "        head_mask=None,\n",
+    "        decoder_head_mask=None,\n",
+    "        cross_attn_head_mask=None,\n",
+    "        encoder_outputs=None, # Explicitly add encoder_outputs\n",
+    "        past_key_values=None,\n",
+    "        inputs_embeds=None,\n",
+    "        decoder_inputs_embeds=None,\n",
     "        labels=None,\n",
+    "        use_cache=None,\n",
+    "        output_attentions=None,\n",
+    "        output_hidden_states=None,\n",
+    "        return_dict=None,\n",
+    "        control_input_ids=None, # Custom arg\n",
+    "        control_attention_mask=None, # Custom arg\n",
+    "        data_input_ids=None, # Custom arg\n",
+    "        data_attention_mask=None, # Custom arg\n",
     "        **kwargs\n",
     "    ):\n",
+    "        # If encoder_outputs is provided (e.g. during generation), just pass it through\n",
+    "        if encoder_outputs is not None:\n",
+    "             return super().forward(\n",
+    "                input_ids=input_ids,\n",
+    "                attention_mask=attention_mask,\n",
+    "                decoder_input_ids=decoder_input_ids,\n",
+    "                decoder_attention_mask=decoder_attention_mask,\n",
+    "                head_mask=head_mask,\n",
+    "                decoder_head_mask=decoder_head_mask,\n",
+    "                cross_attn_head_mask=cross_attn_head_mask,\n",
+    "                encoder_outputs=encoder_outputs,\n",
+    "                past_key_values=past_key_values,\n",
+    "                inputs_embeds=inputs_embeds,\n",
+    "                decoder_inputs_embeds=decoder_inputs_embeds,\n",
+    "                labels=labels,\n",
+    "                use_cache=use_cache,\n",
+    "                output_attentions=output_attentions,\n",
+    "                output_hidden_states=output_hidden_states,\n",
+    "                return_dict=return_dict,\n",
+    "                **kwargs\n",
+    "            )\n",
+    "\n",
     "        # 1. Encode CONTROL\n",
     "        control_outputs = self.encoder(\n",
     "            input_ids=control_input_ids,\n",
@@ -349,30 +387,14 @@
     "\n",
     "        # 4. Decoder forward\n",
     "        return super().forward(\n",
+    "            input_ids=None, # We are providing encoder_outputs, so input_ids is not needed for encoder\n",
     "            encoder_outputs=(encoder_hidden_states,),\n",
     "            attention_mask=encoder_attention_mask,\n",
+    "            decoder_input_ids=decoder_input_ids,\n",
+    "            decoder_attention_mask=decoder_attention_mask,\n",
     "            labels=labels,\n",
     "            **kwargs,\n",
-    "        )\n",
-    "\n",
-    "\n",
-    "model1_name = \"google/flan-t5-base\"\n",
-    "\n",
-    "\n",
-    "bnb_config = BitsAndBytesConfig(\n",
-    "    load_in_4bit=True,\n",
-    "    bnb_4bit_use_double_quant=True,\n",
-    "    bnb_4bit_quant_type=\"nf4\",\n",
-    "    bnb_4bit_compute_dtype=torch.float16  \n",
-    ")\n",
-    "\n",
-    "\n",
-    "model = DualInputT5.from_pretrained(\n",
-    "    model1_name,\n",
-    "    quantization_config=bnb_config,\n",
-    "    device_map=\"auto\",\n",
-    "    trust_remote_code=True\n",
-    ")"
+    "        )\n"
    ]
   },
   {
@@ -390,7 +412,23 @@
     }
    ],
    "source": [
+    "model1_name = \"google/flan-t5-base\"\n",
     "\n",
+    "\n",
+    "bnb_config = BitsAndBytesConfig(\n",
+    "    load_in_4bit=True,\n",
+    "    bnb_4bit_use_double_quant=True,\n",
+    "    bnb_4bit_quant_type=\"nf4\",\n",
+    "    bnb_4bit_compute_dtype=torch.float16  \n",
+    ")\n",
+    "\n",
+    "\n",
+    "model = DualInputT5.from_pretrained(\n",
+    "    model1_name,\n",
+    "    quantization_config=bnb_config,\n",
+    "    device_map=\"auto\",\n",
+    "    trust_remote_code=True\n",
+    ")\n",
     "model.to(device)\n",
     "\n",
     "tokenizer = AutoTokenizer.from_pretrained(model1_name)\n"
@@ -403,6 +441,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from transformers.modeling_outputs import BaseModelOutput\n",
+    "\n",
     "def test_model(control, data, description=None, max_new_tokens=128):\n",
     "    control_inputs = tokenizer(\n",
     "        control,\n",
@@ -427,14 +467,18 @@
     "        encoder_hidden_states = torch.cat([control_enc.last_hidden_state, data_enc.last_hidden_state], dim=1)\n",
     "        encoder_attention_mask = torch.cat([control_inputs.attention_mask, data_inputs.attention_mask], dim=1)\n",
     "\n",
+    "        # Wrap in BaseModelOutput for generate\n",
+    "        encoder_outputs = BaseModelOutput(last_hidden_state=encoder_hidden_states)\n",
+    "\n",
     "        output_ids = model.generate(\n",
-    "            encoder_outputs=encoder_hidden_states,\n",
+    "            encoder_outputs=encoder_outputs,\n",
     "            attention_mask=encoder_attention_mask,\n",
     "            max_new_tokens=max_new_tokens,\n",
-    "            do_sample=False\n",
+    "            do_sample=False,\n",
+    "            # T5 uses pad_token_id as decoder_start_token_id usually\n",
+    "            decoder_start_token_id=model.config.decoder_start_token_id \n",
     "        )\n",
-    "\n",
-    "    return tokenizer.decode(output_ids[0], skip_special_tokens=True)\n"
+    "        return tokenizer.decode(output_ids[0], skip_special_tokens=True)\n"
    ]
   },
   {
@@ -485,8 +529,21 @@
     "        truncation=True,\n",
     "        padding=False,\n",
     "        max_length=512\n",
-    "    )[\"input_ids\"]\n",
+    "    )\n",
+    "    \n",
+    "    # Tokenize the target/response to create labels\n",
+    "    # We use the tokenizer on the expected output\n",
+    "    labels_enc = tokenizer(\n",
+    "        example[\"response\"], \n",
+    "        truncation=True, \n",
+    "        padding=False, \n",
+    "        max_length=128 # Adjust max_length as needed for your targets\n",
+    "    )\n",
+    "    \n",
+    "    # Now we have the tokenized labels\n",
+    "    labels = labels_enc[\"input_ids\"]\n",
     "\n",
+    "    # Replace pad tokens with -100 to ignore them in loss calculation\n",
     "    labels = [\n",
     "        token if token != tokenizer.pad_token_id else -100\n",
     "        for token in labels\n",
@@ -499,10 +556,7 @@
     "        \"data_attention_mask\": data_enc[\"attention_mask\"],\n",
     "        \"labels\": labels,\n",
     "        \"malicious\": example[\"malicious\"]\n",
-    "    }\n",
-    "\n",
-    "\n",
-    "\n"
+    "    }\n"
    ]
   },
   {
@@ -914,6 +968,7 @@
     "import torch\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
+    "from transformers.modeling_outputs import BaseModelOutput\n",
     "\n",
     "def batch_test_model(cases, batch_size=8, max_new_tokens=128):\n",
     "    model.eval()\n",
@@ -960,15 +1015,19 @@
     "                [control_inputs.attention_mask, data_inputs.attention_mask],\n",
     "                dim=1,\n",
     "            )\n",
+    "            \n",
+    "            # Wrap in BaseModelOutput\n",
+    "            encoder_outputs = BaseModelOutput(last_hidden_state=encoder_hidden_states)\n",
     "\n",
     "            out = model.generate(\n",
-    "                encoder_outputs=(encoder_hidden_states,),\n",
+    "                encoder_outputs=encoder_outputs,\n",
     "                attention_mask=encoder_attention_mask,\n",
     "                max_new_tokens=max_new_tokens,\n",
     "                do_sample=False,\n",
+    "                decoder_start_token_id=model.config.decoder_start_token_id\n",
     "            )\n",
     "\n",
-    "            outputs_all.append(out)\n",
+    "            outputs_all.extend(tokenizer.batch_decode(out, skip_special_tokens=True))\n",
     "\n",
     "    return outputs_all\n",
     "\n",
