--- a/model1.ipynb
+++ b/model1.ipynb
@@ -400,6 +400,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "562b2120",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import BitsAndBytesConfig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3630d564",
    "metadata": {},
    "outputs": [
