--- a/model1.ipynb
+++ b/model1.ipynb
@@ -523,6 +523,7 @@
    "outputs": [],
    "source": [
     "from transformers.modeling_outputs import BaseModelOutput\n",
+    "import torch\n",
     "\n",
     "def test_model(control, data, description=None, max_new_tokens=128):\n",
     "    control_inputs = tokenizer(\n",
@@ -538,28 +539,51 @@
     "        truncation=True,\n",
     "        max_length=512\n",
     "    ).to(device)\n",
-    "    \n",
-    "    # Manual encoding for generation\n",
+    "\n",
     "    with torch.no_grad():\n",
-    "        control_enc = model.encoder(input_ids=control_inputs.input_ids, attention_mask=control_inputs.attention_mask)\n",
-    "        data_enc = model.encoder(input_ids=data_inputs.input_ids, attention_mask=data_inputs.attention_mask)\n",
+    "        # Encode CONTROL\n",
+    "        control_enc = model.encoder(\n",
+    "            input_ids=control_inputs.input_ids,\n",
+    "            attention_mask=control_inputs.attention_mask\n",
+    "        )\n",
     "\n",
-    "        # Concatenate\n",
-    "        encoder_hidden_states = torch.cat([control_enc.last_hidden_state, data_enc.last_hidden_state], dim=1)\n",
-    "        encoder_attention_mask = torch.cat([control_inputs.attention_mask, data_inputs.attention_mask], dim=1)\n",
+    "        # Encode DATA\n",
+    "        data_enc = model.encoder(\n",
+    "            input_ids=data_inputs.input_ids,\n",
+    "            attention_mask=data_inputs.attention_mask\n",
+    "        )\n",
     "\n",
-    "        # Wrap in BaseModelOutput for generate\n",
-    "        encoder_outputs = BaseModelOutput(last_hidden_state=encoder_hidden_states)\n",
+    "        # Concatenate encoder outputs\n",
+    "        encoder_hidden_states = torch.cat(\n",
+    "            [control_enc.last_hidden_state, data_enc.last_hidden_state],\n",
+    "            dim=1\n",
+    "        )\n",
+    "        encoder_attention_mask = torch.cat(\n",
+    "            [control_inputs.attention_mask, data_inputs.attention_mask],\n",
+    "            dim=1\n",
+    "        )\n",
     "\n",
+    "        # Wrap for generate()\n",
+    "        encoder_outputs = BaseModelOutput(\n",
+    "            last_hidden_state=encoder_hidden_states\n",
+    "        )\n",
+    "\n",
+    "        # GENERATION (ZORLANMIŞ)\n",
     "        output_ids = model.generate(\n",
     "            encoder_outputs=encoder_outputs,\n",
     "            attention_mask=encoder_attention_mask,\n",
-    "            max_new_tokens=max_new_tokens,\n",
-    "            do_sample=False,\n",
-    "            # T5 uses pad_token_id as decoder_start_token_id usually\n",
-    "            decoder_start_token_id=model.config.decoder_start_token_id \n",
+    "\n",
+    "            max_new_tokens=6,\n",
+    "            min_new_tokens=3,\n",
+    "\n",
+    "            do_sample=True,\n",
+    "            temperature=1.5,\n",
+    "            top_k=50,\n",
+    "\n",
+    "            decoder_start_token_id=model.config.decoder_start_token_id\n",
     "        )\n",
-    "        return tokenizer.decode(output_ids[0], skip_special_tokens=True)\n"
+    "\n",
+    "    return tokenizer.decode(output_ids[0], skip_special_tokens=True)\n"
    ]
   },
   {
@@ -675,7 +699,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
+    "mport re\n",
     "\n",
     "def is_attack_success(control, output):\n",
     "    \"\"\"\n",
@@ -807,7 +831,8 @@
     "print(\n",
     "    \"ATTACK SUCCESS:\",\n",
     "    is_attack_success(case[\"control\"], output)\n",
-    ")\n"
+    ")\n",
+    "\n"
    ]
   },
   {
@@ -4166,6 +4191,25 @@
    "source": [
     "trainer.train()\n",
     "trainer.save_model(\"flan_lora_safe\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b34c6ebe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "case = test_cases[-1]\n",
+    "\n",
+    "after_output = test_model(\n",
+    "    control=case[\"control\"],\n",
+    "    data=case[\"data\"]\n",
+    ")\n",
+    "\n",
+    "print(\"===== AFTER TRAIN =====\")\n",
+    "print(\"MODEL OUTPUT:\\n\", after_output)\n",
+    "print(\"ATTACK SUCCESS:\", is_attack_success(case[\"control\"], after_output))"
    ]
   },
   {
