--- a/model without seperation.ipynb
+++ b/model without seperation.ipynb
@@ -185,7 +185,6 @@
    "outputs": [],
    "source": [
     "from transformers.modeling_outputs import BaseModelOutput\n",
-    "import torch\n",
     "\n",
     "def test_model(control, data, description=None, max_new_tokens=128):\n",
     "    control_inputs = tokenizer(\n",
@@ -201,51 +200,28 @@
     "        truncation=True,\n",
     "        max_length=512\n",
     "    ).to(device)\n",
-    "\n",
+    "    \n",
+    "    # Manual encoding for generation\n",
     "    with torch.no_grad():\n",
-    "        # Encode CONTROL\n",
-    "        control_enc = model.encoder(\n",
-    "            input_ids=control_inputs.input_ids,\n",
-    "            attention_mask=control_inputs.attention_mask\n",
-    "        )\n",
+    "        control_enc = model.encoder(input_ids=control_inputs.input_ids, attention_mask=control_inputs.attention_mask)\n",
+    "        data_enc = model.encoder(input_ids=data_inputs.input_ids, attention_mask=data_inputs.attention_mask)\n",
     "\n",
-    "        # Encode DATA\n",
-    "        data_enc = model.encoder(\n",
-    "            input_ids=data_inputs.input_ids,\n",
-    "            attention_mask=data_inputs.attention_mask\n",
-    "        )\n",
+    "        # Concatenate\n",
+    "        encoder_hidden_states = torch.cat([control_enc.last_hidden_state, data_enc.last_hidden_state], dim=1)\n",
+    "        encoder_attention_mask = torch.cat([control_inputs.attention_mask, data_inputs.attention_mask], dim=1)\n",
     "\n",
-    "        # Concatenate encoder outputs\n",
-    "        encoder_hidden_states = torch.cat(\n",
-    "            [control_enc.last_hidden_state, data_enc.last_hidden_state],\n",
-    "            dim=1\n",
-    "        )\n",
-    "        encoder_attention_mask = torch.cat(\n",
-    "            [control_inputs.attention_mask, data_inputs.attention_mask],\n",
-    "            dim=1\n",
-    "        )\n",
+    "        # Wrap in BaseModelOutput for generate\n",
+    "        encoder_outputs = BaseModelOutput(last_hidden_state=encoder_hidden_states)\n",
     "\n",
-    "        # Wrap for generate()\n",
-    "        encoder_outputs = BaseModelOutput(\n",
-    "            last_hidden_state=encoder_hidden_states\n",
-    "        )\n",
-    "\n",
-    "        # GENERATION (ZORLANMIŞ)\n",
     "        output_ids = model.generate(\n",
     "            encoder_outputs=encoder_outputs,\n",
     "            attention_mask=encoder_attention_mask,\n",
-    "\n",
-    "            max_new_tokens=6,\n",
-    "            min_new_tokens=3,\n",
-    "\n",
+    "            max_new_tokens=max_new_tokens,\n",
     "            do_sample=False,\n",
-    "            temperature=1.5,\n",
-    "            top_k=50,\n",
-    "\n",
-    "            decoder_start_token_id=model.config.decoder_start_token_id\n",
+    "            # T5 uses pad_token_id as decoder_start_token_id usually\n",
+    "            decoder_start_token_id=model.config.decoder_start_token_id \n",
     "        )\n",
-    "\n",
-    "    return tokenizer.decode(output_ids[0], skip_special_tokens=True)"
+    "        return tokenizer.decode(output_ids[0], skip_special_tokens=True)"
    ]
   },
   {
