--- a/finalized_dataset.ipynb
+++ b/finalized_dataset.ipynb
@@ -486,12 +486,12 @@
     "\n",
     "    expected_output = apply_control(control, clean_text)\n",
     "\n",
-    "    rows.append([\n",
-    "        control,\n",
-    "        data,\n",
-    "        expected_output,\n",
-    "        int(is_malicious)\n",
-    "    ])\n",
+    "    rows.append({\n",
+    "        \"CONTROL\": control,\n",
+    "        \"DATA\": data,\n",
+    "        \"EXPECTED_OUTPUT\": expected_output,\n",
+    "        \"MALICIOUS\": int(is_malicious)\n",
+    "    })\n",
     "\n",
     "    if (i + 1) % 500 == 0:\n",
     "        print(f\"   {i + 1}/{TOTAL} samples generated\")\n",
@@ -526,12 +526,12 @@
     "# =============================\n",
     "# Save CSV (EXACT COLUMN ORDER)\n",
     "# =============================\n",
-    "df = pd.DataFrame(\n",
-    "    rows,\n",
-    "    columns=[\"CONTROL\", \"DATA\", \"EXPECTED_OUTPUT\", \"MALICIOUS\"]\n",
-    ")\n",
+    "df = pd.DataFrame(rows)\n",
     "\n",
-    "df.to_csv(\"prompt_injection_dataset2.csv\", index=False)\n",
+    "# Ensure columns are in the correct order\n",
+    "df = df[[\"CONTROL\", \"DATA\", \"EXPECTED_OUTPUT\", \"MALICIOUS\"]]\n",
+    "\n",
+    "df.to_csv(\"prompt_injection_dataset.csv\", index=False)\n",
     "\n",
     "print(\"✅ Saved as prompt_injection_dataset.csv\")\n",
     "print(f\"   Total: {len(df)}\")\n",
@@ -548,7 +548,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "prompt_llm_clean",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -562,7 +562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.19"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
