--- a/model2.ipynb
+++ b/model2.ipynb
@@ -1053,7 +1053,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorchEnv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1067,7 +1067,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
